JVM allows duplicate Runtime[In]VisibleTypeAnnotations attributes in ClassFile/field_info/method_info structures

XMLWordPrintable

    • b51
    • Not verified

        Please use the following command to reproduce the failure:

        $ /java/re/jdk/8/promoted/ea/b102/binaries/solaris-sparcv9/bin/java -jar \
            /java/re/jck/8/nightly/binaries/b29-2013-08-14/JCK-runtime-8/lib/jtjck.jar \
            -v -nojtx vm/classfmt/atr/atrtan002
        Aug 16, 2013 8:25:28 AM Harness starting test run with configuration "jck_runtime_solaris"...
        FAILED: vm/classfmt/atr/atrtan002/atrtan00202m1/atrtan00202m1.html
        FAILED: vm/classfmt/atr/atrtan002/atrtan00202m2/atrtan00202m2.html
        FAILED: vm/classfmt/atr/atrtan002/atrtan00201m2/atrtan00201m2.html
        FAILED: vm/classfmt/atr/atrtan002/atrtan00201m1/atrtan00201m1.html
        FAILED: vm/classfmt/atr/atrtan002/atrtan00203m2/atrtan00203m2.html
        FAILED: vm/classfmt/atr/atrtan002/atrtan00203m1/atrtan00203m1.html
        Aug 16, 2013 8:25:31 AM Finished executing all tests, wait for cleanup...
        Aug 16, 2013 8:25:31 AM Harness done with cleanup from test run.
        Total time = 3s
        Setup time = 0s
        Cleanup time = 0s
        Test results: failed: 6
        Results written to /tmp/JCK-runtime-8_b29-work.
        Error: Some tests did not pass

              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Yuri Gaevsky (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: