8023167: JVM allows duplicate Runtime[In]VisibleTypeAnnotations attributes in ClassFile/field_info/method_info structures

Add checks for duplicates and issue errors when detected.

Reviewed-by: coleenp, zgu